# PaddleOCR

./: .gitignore  DALI_IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt
configs/: DALI_README.md
configs/det/: det_r50_vd_db_dali.yml
configs/det/CLCLab/: CLCLab_Vert_Det_PPOCRv5_03102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_06102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_19102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_v2_19102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_v3_19102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_v4_19102025.yml  CLCLab_Vert_Det_PPOCRv5_Finetune_v5_19102025.yml
configs/det/PP-Thesis/: config.yml
configs/det/ch_PP-OCRv4/: nomna-ch_PP-OCRv4_det_cml.yml
configs/rec/: rec_convnext_ctc.yml  rec_convnext_ctc_verify.yml  rec_convnext_transformer_ctc.yml  rec_mv3_none_bilstm_ctc_pretrain_nomna.yml  rec_svtr_dali.yml
configs/rec/PP-Thesis/: rec_nomnanet_none_add_transformer.yml  rec_nomnanet_none_bigru_add_ctc.yml  rec_nomnanet_none_bigru_add_ctc_finetune.yml  rec_nomnanet_none_bigru_att.yml  rec_nomnanet_none_bigru_concat_ctc.yml  rec_nomnanet_none_bigru_ctc.yml  rec_nomnanet_none_bigru_ctc_finetune.yml  (+1 more)
deploy/android_demo/: .project
doc/: dali_integration.md
ppocr/callbacks/: __init__.py
ppocr/data/: __init__.py  collate_fn.py  curriculum_sampler.py  lmdb_dataset.py  multi_scale_sampler.py  simple_dataset.py
ppocr/losses/: __init__.py  amp_center_loss.py  combined_loss.py  distillation_loss.py  rec_ctc_loss.py  rec_guidance_loss.py  rec_k_ctc_loss.py  rec_multi_loss.py  rec_nomna_loss.py  rec_parseq_loss.py  rec_soft_ctc_loss.py  rec_stc_loss.py  rec_stc_loss_dist.py  rec_stc_loss_v2.py
ppocr/metrics/: __init__.py  det_metric.py  rec_metric.py
ppocr/optimizer/: learning_rate.py
ppocr/postprocess/: __init__.py  rec_postprocess.py
ppocr/utils/: export_model.py  freeze_params.py  save_load.py  stats.py  utility.py
scripts/: dropout.sh  prepare_hisdoc1b_greedy.sh  prepare_ppv6.sh  prepare_ppv7.1.sh  prepare_ppv7.sh  prepare_ppv7_10m.sh
tests/: test_dali_operators.py
tools/: eval.py  export_candidates.py  export_center.py  export_model_summary.py  infer_benchmark.py  infer_rec.py  infer_rec_batch.py  program.py  summary.py  train.py  transform.py  verify_freeze.py
tools/correction/: infer_master.py  infer_master_slave.py  infer_rec.py
tools/infer/: predict_rec.py  utility.py
(+244 files in other folders)
