[build-system]
requires = ["setuptools==72.1.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr"
# After each version release, the version number needs to be incremented
dynamic = ["version"]
description = "Awesome OCR toolkit based on PaddlePaddle"
authors = [
    {name = "PaddlePaddle", email = "Paddle-better@baidu.com"},
]
maintainers = [
    {name = "PaddlePaddle", email = "Paddle-better@baidu.com"},
]
readme = "README.md"
requires-python = ">=3.8.1"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
    "crnn",
    "east",
    "star-net",
    "rosetta",
    "ocrlite",
    "db",
    "chineseocr",
    "chinesetextdetection",
    "chinesetextrecognition",
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "albucore>=0.0.17",
    "albumentations>=1.4.18",
    "cython>=3.1.2",
    "huggingface-hub>=0.30.2",
    "lmdb>=1.6.2",
    "numpy>=1.24.4",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.11.0.86",
    "packaging>=24.2",
    "paddlepaddle-gpu>=2.6.2",
    "paddlex[ie,multimodal,ocr]==3.0.0",
    "pillow>=10.4.0",
    "pyclipper>=1.3.0.post6",
    "pyyaml>=6",
    "rapidfuzz>=3.9.7",
    "requests>=2.32.3",
    "scikit-image>=0.21.0",
    "setuptools>=75.3.2",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12",
    "wandb>=0.20.1",
]

[project.urls]
homepage = "https://github.com/PaddlePaddle/PaddleOCR"
documentation = "https://github.com/PaddlePaddle/PaddleOCR/blob/main/README.md"
repository = "https://github.com/PaddlePaddle/PaddleOCR.git"
issues = "https://github.com/PaddlePaddle/PaddleOCR/issues"

[project.scripts]
paddleocr = "paddleocr.__main__:console_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["paddleocr", "paddleocr.*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'

[tool.pytest.ini_options]
markers = [
    "resource_intensive: mark a test as resource intensive"
]
addopts = "-m 'not resource_intensive'"
